# kaizen

./: .gitignore  CHANGELOG.md  CLAUDE.md  FOLLOWUPS.md  PERSONAL_CLEANUP_AFTER_MERGE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
benchmark/scenarios/: improve.json
docs/: claude-operational-rules.md  design.md  plan.md
docs/design/: kaizen-phase-redesign-design.md  python-cc-tool-bridge-design.md
docs/kaizen/: 2026-05-23-cycle-1-minutes.md  2026-05-23-cycle-10-1-minutes.md  2026-05-23-cycle-10-2-minutes.md  2026-05-23-cycle-10-3-minutes.md  2026-05-23-cycle-10-4-minutes.md  2026-05-23-cycle-2-minutes.md  2026-05-23-cycle-3-minutes.md  2026-05-23-cycle-4-minutes.md  2026-05-24-bridge-smoke-2.md  2026-05-24-bridge-smoke-3.md  2026-05-24-bridge-smoke-4.md  2026-05-24-bridge-smoke.md  2026-05-24-cycle-1-minutes.md
docs/planning/: deferred-todos.md
docs/plans/: kaizen-codebase-fixes-plan.md
docs/runbooks/: codegraph-recon.md  cycle-wall.md  orphan-teammate-cleanup.md  (+1 more)
examples/: __init__.py  agent_teams_wrapper_example.py
migrations/: 001_kaizen_schema.sql  002_add_fk_indexes.sql  003_review_unrecoverable.sql  004_phase_reached_review.sql  005_reason_taxonomy.sql  006_bridge_timeout_reason.sql
scripts/: _tmux_config.py  _tmux_workspace.py  abandonment.py  agent_id_match.py  atelier_engine.py  bridge_db.py  bridge_softdrop.py  bridge_write.py  bump.py  caveman_codec.py  cc_tool_bridge.py  ci_runner.py  cleanup_orphans.py  clone.py  codegraph_recon.py  cycle.py  cycle_git.py  dag.py  db.py  destructive_check.py  detect_config.py  dispatch_templates.py  fix_loop.py  fold_workspace.py  git_utils.py  host_cycle_entry.py  host_executor.py  loom_comms.py  migrate.py  platform_utils.py  plugin_cache.py  pr.py  project.py  release.py  reviewers.py  run.py  run_bridged.py  seed_atelier_in_clone.py  setup.py  sweep_leaked_teams.py  (+15 more)
tests/: conftest.py  test_abandonment.py  test_agent_id_dash_guard.py  test_agent_teams_wrapper_example.py  test_atelier_engine.py  test_bridge_db.py  test_bridge_integration.py  test_bridge_softdrop.py  test_bridge_write.py  test_caveman_codec.py  test_cc_tool_bridge.py  test_cc_tool_bridge_quorum.py  test_ci_runner.py  test_ci_workflow_pins.py  test_cleanup_orphans.py  test_clone.py  test_codegraph_recon.py  test_cycle.py  test_cycle_git.py  test_dag.py  test_db.py  test_destructive_check.py  test_detect_config.py  test_dispatch_templates.py  test_dispatch_templates_byte_identity.py  test_dispatch_templates_md_loader.py  test_dispatch_templates_softdrop.py  test_end_to_end_team_mode.py  test_f3_fire_order.py  test_fix_loop.py  test_fold_workspace.py  test_git_utils.py  test_host_cycle_entry.py  test_host_executor.py  test_loom_comms.py  test_migrate.py  test_pane_title_persistence.py  test_phase_3_close_reads_contract.py  test_plugin_cache.py  test_pr.py  (+32 more)
(+35 files in other folders)
